test/cases/compile_errors/invalid_underscore_placement_in_float_literal-12.zig
fn main() void {
    var bad: f128 = 0_x0.0;
    _ = bad;
}

// error
// backend=stage2
// target=native
//
// :2:21: error: expected expression, found 'invalid bytes'
// :2:23: note: invalid byte: 'x'
